<resources>
    <string name="app_name">KatieKarateMusic</string>
    <string name="music_library_label">Music Library</string>
    <string name="now_playing_label">Now Playing</string>
    <string name="upload_label">Upload</string>
    <string name="song_details_label">Song Details</string>
    <string name="create_label">Create New Recording</string>
    <string name="begin_recording">Begin Recording</string>
    <string name="song_notes_hint">Enter Song Title</string>
    <string name="save_to_library">Save to Library</string>
    <string name="edit_song">Edit Song</string>
    <string name="play_song">Play Song</string>
    <string name="edit_song_explanation">Imagine these sliders can edit different aspects of a song</string>
    <string name="upload_original">Upload your original content from other connected apps or directly from your device</string>
    <string name="go_to_music_library_label">Go to Music Library</string>
    <string name="now_playing_explanation">Here I would implement the MediaPlayer class to allow audio playback</string>
    <string name="record_explanation">Here I would implement the AudioRecord class to allow audio recording</string>
    <string name="save_to_drive_explanation">Here I would implement the Google Drive api to allow saving of audio files to Google Drive</string>

    <!--Content Description-->
    <string name="library_description">Library Icon</string>
    <string name="play_button_description">Play Icon</string>
    <string name="rewind_button_description">Rewind Icon</string>
    <string name="pause_button_description">Pause Icon</string>
    <string name="forward_button_description">Fast Forward Icon</string>
    <string name="song_art_description">Pixel art of a backpacker named Nelson Wells</string>
    <string name="back_button_description">System back Icon</string>
    <string name="edit_button_description">Edit Button Icon</string>

    <!--Song Titles-->
    <string name="talking_song_label">Talking</string>
    <string name="battle_song_label">Battle Song</string>
    <string name="casper_song_label">Casper\'s Song</string>

</resources>
