<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/now_playing_background"
    tools:context="com.katiekaratemusic.android.katiekaratemusic.NowPlaying">

    <ImageButton
        android:id="@+id/now_playing_system_back_button"
        style="@style/SystemBackButtonStyle"/>

    <TextView
        style="@style/LabelTextStyle"
        android:layout_centerHorizontal="true"
        android:text="@string/now_playing_label"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="2dp"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/song_art_margin"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/song_art_description"
        android:src="@drawable/nelson_wells_art"/>

    <View
        android:layout_above="@+id/play_controls"
        style="@style/DividerStyle"/>

    <LinearLayout
        android:id="@+id/play_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_fast_rewind_black_24px"
            android:contentDescription="@string/rewind_button_description"/>

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_pause_black_24px"
            android:contentDescription="@string/pause_button_description"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_play_arrow_black_24px"
            android:contentDescription="@string/play_button_description"/>

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_fast_forward_black_24px"
            android:contentDescription="@string/forward_button_description"/>
    </LinearLayout>

</RelativeLayout>
