<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.katiekaratemusic.android.katiekaratemusic.NowPlaying">

    <ImageButton
        android:id="@+id/create_new_system_back_button"
        style="@style/SystemBackButtonStyle"/>

    <TextView
        android:layout_margin="@dimen/music_item_padding"
        android:text="@string/record_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:layout_width="@dimen/mic_image_width"
        android:layout_height="@dimen/mic_image_height"
        android:layout_gravity="center"
        android:background="@drawable/ic_mic_black_24px"/>

    <TextView
        style="@style/LabelTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/begin_recording"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/song_edit_text_note_margin"
        android:hint="@string/song_notes_hint"/>

    <ImageButton
        android:layout_width="@dimen/play_control_image_width"
        android:layout_height="@dimen/play_control_image_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_backup_black_24px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/save_to_library"/>

    <TextView
        android:padding="@dimen/music_item_padding"
        android:text="@string/save_to_drive_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
