<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.katiekaratemusic.android.katiekaratemusic.MusicLibrary">

    <ImageButton
        android:id="@+id/music_library_system_back_button"
        style="@style/SystemBackButtonStyle"/>

    <View
        style="@style/DividerStyle"/>

    <TextView
        style="@style/LabelTextStyle"
        android:text="@string/music_library_label"/>

    <View
        style="@style/DividerStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/music_item_padding">

        <TextView
            style="@style/MusicItemStyle"
            android:text="@string/talking_song_label"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/talking_song_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_play_arrow_black_24px"
                android:contentDescription="@string/play_button_description"/>

            <TextView
                style="@style/EditSongStyle"
                android:text="@string/play_song"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/talking_edit_button"
                style="@style/PlayEditIconStyle"
                android:background="@drawable/ic_mode_edit_black_24px"/>

            <TextView
                style="@style/EditSongStyle"
                android:text="@string/edit_song"/>
        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/DividerStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/music_item_padding">

        <TextView
            style="@style/MusicItemStyle"
            android:text="@string/battle_song_label"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/battle_song_button"
                style="@style/PlayEditIconStyle"
                android:background="@drawable/ic_play_arrow_black_24px"
                android:contentDescription="@string/play_button_description"/>

            <TextView
                style="@style/EditSongStyle"
                android:text="@string/play_song"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/battle_edit_button"
                style="@style/PlayEditIconStyle"
                android:background="@drawable/ic_mode_edit_black_24px"
                android:contentDescription="@string/edit_button_description"/>

            <TextView
                style="@style/EditSongStyle"
                android:text="@string/edit_song"/>

        </LinearLayout>


    </LinearLayout>

    <View
        style="@style/DividerStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/music_item_padding">

        <TextView
            style="@style/MusicItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casper_song_label"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/casper_song_button"
                style="@style/PlayEditIconStyle"
                android:background="@drawable/ic_play_arrow_black_24px"
                android:contentDescription="@string/play_button_description"/>

            <TextView
                style="@style/EditSongStyle"
                android:text="@string/play_song"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/casper_edit_button"
                style="@style/PlayEditIconStyle"
                android:background="@drawable/ic_mode_edit_black_24px"/>

            <TextView
                style="@style/EditSongStyle"
                android:text="@string/edit_song"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
